# SDK-Linux

./: README.md  模组信息采集（客户手册） 1.2.2.docx
demo/: CMakeLists.txt  Indem.cpp
demo/include/opencv2/: cvconfig.h
demo_ros/src/: CMakeLists.txt  ReadMe.txt  package.xml
demo_ros/src/include/: imrdata.h
demo_ros/src/src/: camera_driver.cpp
include/: imrsdk.h
lib/1604/: TestIndem  TestIndem.sh  libboost_filesystem.so.1.58.0  libboost_system.so.1.58.0  libboost_thread.so.1.58.0  libg3logger.so.1.3.0-0  libopencv_calib3d.so.3.4  libopencv_features2d.so.3.4  libopencv_flann.so.3.4  libopencv_highgui.so.3.4  libprotobuf-lite.so.14  libtbb.so.2  module_driver  run.sh
lib/1804/: TestIndem  TestIndem.sh  imr.json  libboost_filesystem.so.1.58.0  libboost_system.so.1.58.0  libboost_thread.so.1.58.0  libgfortran.so.3  libopencv_calib3d.so.3.4  libopencv_features2d.so.3.4  libopencv_flann.so.3.4  libopencv_highgui.so.3.4  libopencv_videoio.so.3.4  libprotobuf-lite.so.14  slam_imp.yaml
lib/1804/plugin/pointcloud/: config.json
模组信息采集（客户手册） 1.2.2.docx_FILES/customXml/: itemProps1.xml
模组信息采集（客户手册） 1.2.2.docx_FILES/docProps/: app.xml  core.xml
模组信息采集（客户手册） 1.2.2.docx_FILES/word/: document.xml  endnotes.xml  fontTable.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml
模组信息采集（客户手册） 1.2.2.docx_FILES/word/_rels/: document.xml.rels
模组信息采集（客户手册） 1.2.2.docx_FILES/word/theme/: theme1.xml
